Fix select extra padding, close #6723

--- a/components/form/style/index.less
+++ b/components/form/style/index.less
@@ -149,15 +149,14 @@ form {
 
     // Fix overlapping between feedback icon and <Select>'s arrow.
     // https://github.com/ant-design/ant-design/issues/4431
-    .@{ant-prefix}-select {
-      &-arrow,
-      &-selection__clear {
-        right: 28px;
-      }
-      &-selection-selected-value {
-        padding-right: 42px;
-      }
+    :not(.@{ant-prefix}-input-group-addon) > .@{ant-prefix}-select .@{ant-prefix}-select-arrow,
+    :not(.@{ant-prefix}-input-group-addon) > .@{ant-prefix}-select .@{ant-prefix}-select-selection__clear {
+      right: 28px;
     }
+    :not(.@{ant-prefix}-input-group-addon) > .@{ant-prefix}-select .@{ant-prefix}-select-selection-selected-value {
+      padding-right: 42px;
+    }
+
     .@{ant-prefix}-cascader-picker {
       &-arrow {
         padding-right: 36px;
